--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,13 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 10vmin;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #ffffff;
+  min-height: 10vh;
+  max-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,3 +21,15 @@
 .App-link {
   color: #09d3ac;
 }
+
+.Main-Container {
+  min-height: 90vh;
+  display: flex-start;
+  background-color: #ffffff;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+}
+
+.Title {}
