--- a/src/App.css
+++ b/src/App.css
@@ -8,14 +8,13 @@
 
 .App-header {
   background-color: #ffffff;
-  min-height: 10vh;
-  max-height: 10vh;
+  max-height: 800px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #2e4355;
 }
 
 .App-link {
@@ -23,13 +22,12 @@
 }
 
 .Main-Container {
-  min-height: 90vh;
-  display: flex-start;
   background-color: #ffffff;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  color: #2e4355;
 }
 
-.Title {}
+.Title {
+}
